@@ -1,6 +1,12 @@
 # ChangeLog for net-wireless/iw
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/iw/ChangeLog,v 1.8 2009/03/27 13:02:07 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/iw/ChangeLog,v 1.9 2009/04/08 18:11:08 chainsaw Exp $
+
+*iw-0.9.12 (08 Apr 2009)
+
+  08 Apr 2009; <chainsaw@gentoo.org> +iw-0.9.12.ebuild:
+  Version bump, contains new plain "scan" command which triggers, waits &
+  dumps.
 
 *iw-0.9.11 (27 Mar 2009)
 
